Fix for bug# 21101 - returns wrong error message when table column defs exceed the max row size.

The fix returns a more appropriate error message. Add a test case to
innodb.test and expected output to innodb.result.